fixed bug with footer covering up comments on help pages

--- a/mod-picker/app/assets/stylesheets/pages/showHelpPage.scss
+++ b/mod-picker/app/assets/stylesheets/pages/showHelpPage.scss
@@ -26,7 +26,7 @@
 }
 
 .help-video-container {
-  padding: 50px 0 10px;
+  padding: 50px 0 110px;
 
   .page-container {
     padding: 0;
